--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -43,8 +43,9 @@
 		display: block;
 		float: left;
 		width: 100%;
-		margin: 50px 0;
+		margin: 50px 0 100px;
 		.news__item--soc {
+			margin-top: 5px;
 			a {
 				display: block;
 				float: none;
