--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,18 @@
     overflow: auto;
 }
 
-.page__title img {
+/*.page__title img {
     width: 100%;
-}
+}*/
 
-.page__header {
+/*.page__header {
     -webkit-background-size: cover;
     background-size: cover;
-}
+}*/
 
-.header:after {
+/*.header:after {
     bottom: -19%!important;
     -webkit-background-size: cover!important;
     -o-background-size: cover!important;
     background-size: cover!important;
-}
+}*/
