--- a/sass/content/_page.scss
+++ b/sass/content/_page.scss
@@ -14,6 +14,7 @@
 		img {
 			position: relative;
 			max-width: 100%;
+			width: 100%;
 			height: auto;
 			vertical-align: middle;
 			z-index: 1;
